# DiagnosticTools_qt5_qt6

./: CMakeLists.txt  Diagnostictools.json.in  README.md  diagnostictools.h  diagnostictools_global.h  diagnostictoolsconstants.h  diagnostictoolsfactory.cpp  diagnostictoolsfactory.h  diagnostictoolsplugin.cpp  diagnostictoolstr.h
dataqueryengine/: dataqueryengine.cpp  dataqueryengine.h
datavisualiser/: datavisualiser.cpp  datavisualiser.h  datavisualiser.ui  plotwidget.cpp  plotwidget.h
